--- a/manati.html
+++ b/manati.html
@@ -30,7 +30,7 @@ llamada: San San Pod Sak de Panam&aacute;.</p>
 
 <tr> 
 <td></td>
-<td align="center"> <img src="manatíes.jpg" width="600" height="400" align="center"/></td>
+<td align="center"> <img src="Manatíes.jpg" width="600" height="400" align="center"/></td>
 <td></td> 
 </tr> 
 
